Fixed up word-wrapping in tables. Added info to C/C++ build/package tool review.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,11 @@ div.content table {
     margin-left: auto; 
     margin-right: auto;
     font-size: 1.1rem;
+
+    /* The right-column has break-word set to stop long strings/URLs from going off the side
+    of the page. We need to however set word-break back to normal here otherwise column sizes
+    look weird */
+    word-break: normal;
 }
 
 div.content th {
